jwplow.github.io

--- a/unit_1.html
+++ b/unit_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Joe Plowman</title>
+	<title>Web Design Circuit: Unit 1</title>
 </head>
 <body style="background-color:lightgrey">
 <h1>Joe Plowman</h1>
@@ -54,6 +54,10 @@
 <h2>Contact</h2>
 <p>
 If you're interested in contacting me, feel free to email me at: <a href="mailto:jwplow@gmail.com?cc=jplowman@me.com&subject=Your%20Page"target"_top">jwplow@gmail.com</a>
+</p>
+
+<p>
+<div style="background-color:black; color:white; margin:0px; padding:0px;"><a href="index.html"</a> Return to Index Page
 </p>
 
 </body>
