jwplow.github.io

--- a/unit_2.html
+++ b/unit_2.html
@@ -12,7 +12,7 @@
 
 <p>
 	<a href="http://www.seatgeek.com/" target="_blank"><strong>SeatGeak</strong><br></a>
-	<img src="seatgeek.jpg" alt="SeatGeek Screen Capture"><br>
+	<img src="SeatGeek.jpg" alt="SeatGeek Screen Capture"><br>
 	This website is great at aggregating large amounts of data and simplifying the information that is presented in a very appealing manner with a simplistic and powerful design.
 </p>
 
@@ -54,7 +54,7 @@ Overall, I think the site does a great job managing space, size and balance to p
 
 <p>
 	<a href="http://www.taskrabbit.com/" target=_blank><strong>TaskRabbit</strong><br></a>
-	<img src="taskrabbit.jpg" alt="TaskRabbit Screen Capture"><br>
+	<img src="TaskRabbit.jpg" alt="TaskRabbit Screen Capture"><br>
 	This site was designed to inform current and potential customers and taskers about the App based crowd sourcing service connecting two marketplaces.
 </p>
 
