jwplow.github.io

--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>GA Web Design Circuit: Joe Plowman</title>
 </head>
-<body style="background-color:lightgrey">
 
-<div style="background-color:black; color:white; margin:0px; padding:0px;">
-<img src="ga.jpeg" alt="GA Logo">
-</div> 
+	<body style="background-color:lightgrey">
+
+	<div style="background-color:black; color:white; margin:0px; padding:0px;">
+	<img src="images/ga.jpeg" alt="GA Logo">
+	</div> 
 
 <h1>Web Design Circuit</h1>
+
 <h3>Joe Plowman's Work:</h3>
+
 <p>
-<a href="unit_1.html"><strong>Unit 1:</strong> How the Web Works</a>
-<br>
-<a href="unit_2.html"><strong>Unit 2:</strong> How Design Works</a>
-<br>
-<strong>Unit 3: HTML and CSS Basics</strong>
-<br>
-<strong>Unit 4: Web Design Basics</strong>
-<br>
-<strong>Unit 5: Basic Webpage Layout</strong>
-<br>
-<strong>Unit 6: Navigation and Page Layout</strong>
-<br>
-<strong>Unit 7: Design Critique</strong>
-<br>
-<strong>Unit 8: Designing Across Platforms</strong>
-<br>
-<strong>Unit 9: Responsive Design</strong>
-<br>
-<strong>Unit 10: Tables and Emails</strong>
-<br>
-<strong>Unit 11: Final Project</strong>
+	<a href="unit_1.html"><strong> Unit 1:</strong> How the Web Works</a>
+		<br>
+	<a href="unit_2.html"><strong> Unit 2:</strong> How Design Works</a>
+		<br>
+	<a href="unit_3.html"><strong> Unit 3:</strong> HTML and CSS Basics</a>
+		<br>
+	<strong>Unit 4:</strong> Web Design Basics
+		<br>
+	<strong>Unit 5:</strong> Basic Webpage Layout
+		<br>
+	<strong>Unit 6:</strong> Navigation and Page Layout
+		<br>
+	<strong>Unit 7:</strong> Design Critique
+		<br>
+	<strong>Unit 8:</strong> Designing Across Platforms
+		<br>
+	<strong>Unit 9:</strong> Responsive Design
+		<br>
+	<strong>Unit 10:</strong> Tables and Emails
+		<br>
+	<strong>Unit 11:</strong> Final Project
 </p>
+
 </body>
 </html>
