jwplow.github.io

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<br>
 	<a href="unit_3.html"><strong> Unit 3:</strong> HTML and CSS Basics</a>
 		<br>
-	<strong>Unit 4:</strong> Web Design Basics
+	<a href="unit_4.html"><strong>Unit 4:</strong> Web Design Basics</a>
 		<br>
 	<strong>Unit 5:</strong> Basic Webpage Layout
 		<br>
