--- a/unit_4.html
+++ b/unit_4.html
@@ -6,9 +6,11 @@
 
 	<link rel="stylesheet" type="textcss" href="css/style4.css"
 	
-	<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 
 	<title>The Aviator Bar & Kitchen</title>
+
+	<link rel="shortcut icon" type="image/favicon" href="images/favicon.ico">
 
 	</head>
 		
@@ -16,12 +18,16 @@
 		
 		<div id="name"
 			
-			<p>
 			<a href="#"><img src="images/aviator_logo.png"></a>
+			<br>
+			<h1> Bar & Kitchen </h1>
+			<br>
+			<hr>
+			<br>
+			<p>
+				The Aviator Bar & Kitchen is dedicated to pouring an expertly mixed cocktail and providing an unmatched environment. The kitchen serves some of the most unique dishes in the city. Our ingredients are carefully selected and prepared by Nashville's best chefs.
 			</p>
 
 		</div>
-
-		</body>
 
 </html>
