jwplow.github.io

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>GA Web Design Circuit: Joe Plowman</title>
+	<link rel="stylesheet" type="textcss" href="css/style5.css"
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 </head>
-
-	<body style="background-color:lightgrey">
 
 	<div style="background-color:black; color:white; margin:0px; padding:0px;">
 	<img src="images/ga.jpeg" alt="GA Logo">
@@ -24,7 +24,7 @@
 		<br>
 	<a href="unit_4.html"><strong>Unit 4:</strong> Web Design Basics</a>
 		<br>
-	<strong>Unit 5:</strong> Basic Webpage Layout
+	<a href="unit_5.html"><strong>Unit 5:</strong> Basic Webpage Layout</a>
 		<br>
 	<strong>Unit 6:</strong> Navigation and Page Layout
 		<br>
