jwplow.github.io

--- a/unit_5.html
+++ b/unit_5.html
@@ -92,6 +92,11 @@
 			<p><img src="images/bgcolors.png" alt="Background Colors"</p>
 			<h3>Font Colors</h3>
 			<p><img src="images/fontcolors.png" alt="Font Colors"</p>
+
+		<h2>4. Create/Upload sketches</h2>
+			<a href="images/website_wireframe.pdf" target="_blank"><strong>Unit 5 Wireframe PDF</strong></a>
+			<br>
+
 </body>
 
 </html>
