jwplow.github.io

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<br>
 	<a href="unit_5.html"><strong>Unit 5:</strong> Basic Webpage Layout</a>
 		<br>
-	<strong>Unit 6:</strong> Navigation and Page Layout
+	<a href="unit_6.html"><strong>Unit 6:</strong> Navigation and Page Layout</a>
 		<br>
 	<strong>Unit 7:</strong> Design Critique
 		<br>
