jwplow.github.io
Unit 7, upload 2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<br>
 	<a href="unit_6.html"><strong>Unit 6:</strong> Navigation and Page Layout</a>
 		<br>
-	<strong>Unit 7:</strong> Design Critique
+	<a href="unit_7.html"><strong>Unit 7:</strong> Design Critique</a>
 		<br>
 	<strong>Unit 8:</strong> Designing Across Platforms
 		<br>
