--- a/unit_7.html
+++ b/unit_7.html
@@ -15,7 +15,7 @@
 
 	<h1>Unit 7: Final Mid-Term Assignment</h1>
 
-		<h2>PowerPoint Files</h2>
+		<h2>DESIGN CRITIQUE: PowerPoint Files</h2>
 			
 			<h3>Document explaining my process for Unit 5 and 6:</h3>
 
