jwplow.github.io
3rd upload

--- a/unit_7.html
+++ b/unit_7.html
@@ -15,9 +15,9 @@
 
 	<h1>Unit 7: Final Mid-Term Assignment</h1>
 
-		<h2>DESIGN CRITIQUE: PowerPoint Files</h2>
+		<h2>Design Critique</h2>
 			
-			<h3>Document explaining my process for Unit 5 and 6:</h3>
+			<h3>PowerPoint explaining the process for Units 5 and 6:</h3>
 
 			<p>
 				<ul>
@@ -28,6 +28,8 @@
 				<li><a href="unit7media/plowmanunit7.pptx" target="_blank"><strong>PowerPoint File (PPTX)</strong></a></li><br>
 				</ul>
 			</p>
+
+			<img src="unit7media/screenshot.jpg" alt="PowerPoint Screen Shot">
 
 </body>
 
