jwplow.github.io

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<br>
 	<a href="unit_7.html"><strong>Unit 7:</strong> Design Critique</a>
 		<br>
-	<strong>Unit 8:</strong> Designing Across Platforms
+	<a href="unit_8.html"><strong>Unit 8:</strong> Designing Across Platforms</a>
 		<br>
 	<strong>Unit 9:</strong> Responsive Design
 		<br>
